--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (2.1.7) unstable; urgency=low
+
+  * debian/package.filename.arch is now checked for first, before
+    debian/package.filename. Closes: #69453
+  * Added a section to debhelper(1) about files in debian/ used by
+    debhelper, which documents this. Removed scattered references to
+    debian/filename from all over the man pages.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 20 Aug 2000 18:06:52 -0700
+
 debhelper (2.1.6) unstable; urgency=low
 
   * dh_strip: now knows about the DEB_BUILD_OPTIONS=nostrip thing.
