--- a/dh_installlogrotate.1
+++ b/dh_installlogrotate.1
@@ -7,10 +7,7 @@ dh_installlogrotate \- install logrotate config files
 .SH "DESCRIPTION"
 dh_installlogrotate is a debhelper program that is responsible for installing
 logrotate config files into etc/logrotate.d in package build directories.
-The file debian/logrotate is installed. If your package generates multiple
-binary packages (or if you just prefer to do it), you can also use filenames
-like debian/package.logrotate, where "package" is replaced with the name of
-the binary package this logrotate config file goes into.
+Files named debian/package.logrotate are installed.
 .SH OPTIONS
 .TP
 .B debhelper options
