--- a/dh_link.1
+++ b/dh_link.1
@@ -5,7 +5,7 @@ dh_link \- create symlinks in package build directories
 .B dh_link
 .I "[debhelper options] [-A] [source destination ...]"
 .SH "DESCRIPTION"
-dh_link is a debhelper program that creates symlinks in package build 
+dh_link is a debhelper program that creates symlinks in package build
 directories.
 .P
 dh_link accepts a list of pairs of source and destination files. The source
@@ -15,13 +15,12 @@ destination files are the symlinks that will be created. There
 be an equal number of source and destination files specified.
 .P
 The list can be specified in two ways. A file named debian/package.links
-(debian/links may be used for the first binary package in debian/control)
 can list pairs of files. If you use this file, you should put each pair
 of files on its own line, and separate the files within the pair with
 whitespace. Also, pairs of files can be specified as parameters - these
 pairs will only be created in the package build directory of the first
-ackage dh_link is told to act on. By default, this is the first binary 
-package in debian/control, but if you use -p, -i, or -a flags, it will be 
+ackage dh_link is told to act on. By default, this is the first binary
+package in debian/control, but if you use -p, -i, or -a flags, it will be
 the first package specified by those flags.
 .P
 Be sure you
@@ -47,8 +46,8 @@ Create any links specified by command line parameters in ALL packages
 acted on, not just the first.
 .TP
 .B source destination ...
-Create a file named "destination" as a link to a file named "source". Do 
-this in the package build directory of the first package acted on. 
+Create a file named "destination" as a link to a file named "source". Do
+this in the package build directory of the first package acted on.
 (Or in all packages if -A is specified.)
 .SH EXAMPLES
 .TP
@@ -66,7 +65,8 @@ for a list of environment variables that affect all debhelper commands.
 .BR debhelper (1)
 .SH BUGS
 It's impossible to specify filenames with spaces or other whitespace in them
-in debian/links file. This is more a historical design flaw than a bug.
+in debian/package.links files. This is more a historical design flaw than a
+bug.
 .SH "CONFORMS TO"
 Debian policy, version 3.0.1
 .SH AUTHOR
