--- a/dh_md5sums.1
+++ b/dh_md5sums.1
@@ -9,7 +9,7 @@ dh_md5sums is a debhelper program that is responsible for generating
 a DEBIAN/md5sums file, which lists the md5sums of each file in the package.
 .P
 All files in DEBIAN/ are omitted from the md5sums file, as are all conffiles
-(unless you use the -x switch).
+(unless you use the --include-conffiles switch).
 .P
 The md5sums file is installed with proper permissions and ownerships.
 .SH OPTIONS
