--- a/dh_undocumented.1
+++ b/dh_undocumented.1
@@ -20,16 +20,15 @@ generates the necessary symlinks to
 .BR undocumented (7)
 , placing the sylinks in the package build directory.
 .P
-The lists of man pages that need 
+The lists of man pages that need
 .BR undocumented (7)
 symlinks can be specified in two ways. Any man page names specified as
 parameters will be set up in the first package dh_undocumented is told
-to act on. By default, this is the first binary package in debian/control, 
-but if you use -p, -i, or -a flags, it will be the first package specified 
+to act on. By default, this is the first binary package in debian/control,
+but if you use -p, -i, or -a flags, it will be the first package specified
 by those flags.
-Also, a file named debian/package.undocumented (or debian/undocumented, for 
-the first binary package in debian/control) can list other man page names to
-set up.
+Also, a file named debian/package.undocumented can list other man page names
+to set up.
 .SH OPTIONS
 .TP
 .TP
@@ -39,7 +38,7 @@ See
 for a list of options common to all debhelper commands.
 .TP
 .B \-A, \--all
-Install undocumented man page symlinks for any man pages specified by 
+Install undocumented man page symlinks for any man pages specified by
 command line parameters in ALL packages acted on. I doubt anyone will find
 this useful, it's here for consitency with other debhelper programs.
 .TP
