--- a/dh_installcron.1
+++ b/dh_installcron.1
@@ -7,11 +7,8 @@ dh_installcron \- install cron scripts into etc/cron.*
 .SH "DESCRIPTION"
 dh_installcron is a debhelper program that is responsible for installing
 cron scripts into etc/cron.* in package build directories. The files
-debian/cron.daily, debian/cron.weekly, debian/cron.monthly, and debian/cron.d
-are installed. If your package generates multiple binary packages (or if you
-just prefer to do it), you can also use filenames like 
-debian/package.cron.daily, where "package" is replaced with the name of the 
-binary package this cron script goes into.
+debian/package.cron.daily, debian/package.cron.weekly,
+debian/package.cron.monthly, and debian/package.cron.d are installed.
 .SH OPTIONS
 .TP
 .B debhelper options
