--- a/dh_installdirs.1
+++ b/dh_installdirs.1
@@ -10,11 +10,10 @@ subdirectories in package build directories.
 .P
 Any directory names specified as parameters will be created in the package
 build directory of the first package dh_installdirs is told to act on. By
-default, this is the first binary package in debian/control, but if you use 
+default, this is the first binary package in debian/control, but if you use
 -p, -i, or -a flags, it will be the first package specified by those flags.
 .P
-A file named debian/package.dirs (debian/dirs may be used for the first
-binary package in debian/control) can list other directories to be created.
+A file named debian/package.dirs can list other directories to be created.
 Separate the directory names with whitespace.
 .P
 Be sure to only use directory names relative to the package build
@@ -41,6 +40,6 @@ for a list of environment variables that affect all debhelper commands.
 .BR debhelper (1)
 .SH BUGS
 It's impossible to specify filenames with spaces or other whitespace in them
-in debian/dirs file. This is more a historical design flaw than a bug.
+in debian/package.dirs file. This is more a historical design flaw than a bug.
 .SH AUTHOR
 Joey Hess <joeyh@debian.org>
