--- a/dh_suidregister.1
+++ b/dh_suidregister.1
@@ -7,17 +7,16 @@ dh_suidregister \- set up package to register files with suidregister
 .SH "DESCRIPTION"
 dh_suidregister is a debhelper program that is responsible for modifying the
 postinst and postrm scripts of a package so the package will register files
-with 
+with
 .BR suidregister (1)
 when it is installed.
 .P
-Any filenames specified as parameters will be registered in the first 
-package dh_suidregister is told to act on. By default, this is the first 
-binary package in debian/control, but if you use -p, -i, or -a flags, 
+Any filenames specified as parameters will be registered in the first
+package dh_suidregister is told to act on. By default, this is the first
+binary package in debian/control, but if you use -p, -i, or -a flags,
 it will be the first package specified by those flags.
 .P
-Files named debian/package.suid (or debian/suid for the first binary package
-in debian/control) can list other files to be registered.
+Files named debian/package.suid can list other files to be registered.
 .P
 If neither of these methods is used to specify files, dh_suidregister will
 scan the package build directory for files that have suid permissions, and
