--- a/doc/TODO
+++ b/doc/TODO
@@ -3,8 +3,6 @@ list grows - I welcome patches to fix items on it!
 
 Wishlist items:
 
-* Move the perl libs into the correct perl lib dirs. Makes all debehelper
-  scripts shorter..
 * Make dh_* "use strict".
 * Make dh_movefiles remove emptied directories after it's moved all the
   files out of them (#17111).
@@ -67,6 +65,10 @@ Deprecated:
   - currently, a few packages in potato use dh_du, but bugs have been filed.
 * Remove support for --number option
   - only dh_installemacsen ever used it, it is not --priority.
-* DH_COMPAT 1. Can be removed onve all packages are seen to be using 2 or
+* DH_COMPAT 1. Can be removed once all packages are seen to be using 2 or
   higher. I won't hold my breath.
+* Also, grep the entire archive for all dh_* command lines, and check to
+  see what other switches are not being used, and maybe remove some of
+  them. I'd also like to depercate/remove debian/compress files, -X is
+  a better idea.
 
