--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.1.8) unstable; urgency=low
+
+  * Fixed a stupid typo. Closes: #69750
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 22 Aug 2000 15:14:48 -0700
+
 debhelper (2.1.7) unstable; urgency=low
 
   * debian/package.filename.arch is now checked for first, before
