r371:    * Modified to allow no spaces between control file field name and value      (this appears to be logal).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.1.10) unstable; urgency=low
+
+  * Modified to allow no spaces between control file field name and value
+    (this appears to be logal).
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 19 Sep 2000 23:13:17 -0700
+
 debhelper (2.1.9) unstable; urgency=low
 
   * dh_installmodules: corrected the code added to maintainer scripts so it
