r372:    * dh_installmanpages: don't install files that start with .#* -- these      are CVS files..

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.1.11) unstable; urgency=low
+
+  * dh_installmanpages: don't install files that start with .#* -- these
+    are CVS files..
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Sep 2000 11:58:52 -0700
+
 debhelper (2.1.10) unstable; urgency=low
 
   * Modified to allow no spaces between control file field name and value
