r374:    * Rebuild to remove cvs junk, Closes: #72610

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.1.12) unstable; urgency=low
+
+  * Rebuild to remove cvs junk, Closes: #72610
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 27 Sep 2000 12:39:06 -0700
+
 debhelper (2.1.11) unstable; urgency=low
 
   * dh_installmanpages: don't install files that start with .#* -- these
