--- a/debhelper.1
+++ b/debhelper.1
@@ -50,7 +50,7 @@ In some rare cases, you may want to have different versions of these files
 for different architectures. If files named debian/<package>.foo.<arch>
 exist, where <arch> is the same as the output of "dpkg --print-architecture",
 then they will be used in preference to other, more general files.
-.SH "SHARED DEBHLPER OPTIONS"
+.SH "SHARED DEBHELPER OPTIONS"
 The following command line options are supported by all debhelper programs.
 .TP
 .B \-v, \--verbose
