r376:    * Rats, the previous change makes duplicate lines be created in the      shlibs file, and lintian conplains. Added some hackery that should      prevent that. Closes: #73052

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.1.14) unstable; urgency=low
+
+  * Rats, the previous change makes duplicate lines be created in the
+    shlibs file, and lintian conplains. Added some hackery that should
+    prevent that. Closes: #73052
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  3 Oct 2000 12:32:22 -0700
+
 debhelper (2.1.13) unstable; urgency=low
 
   * Typo, Closes: #72932
