r377:    * dh_installwm: patched a path in some backwards compatability code.      Closes: #75283

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.1.15) unstable; urgency=low
+
+  * dh_installwm: patched a path in some backwards compatability code.
+    Closes: #75283
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 23 Oct 2000 10:13:44 -0700
+
 debhelper (2.1.14) unstable; urgency=low
 
   * Rats, the previous change makes duplicate lines be created in the
