r379:    * dh_movefiles.1: well I thought it was quite obvious why it always used      debian/tmp, but it's a faq. Added some explanation. By the way, since      there now exists a documented way to use dh_movefiles that does not      have problems with empty directories that get left behind and so on, I      think this Closes: #17111, #51985

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (2.1.17) unstable; urgency=low
+
+  * dh_movefiles.1: well I thought it was quite obvious why it always used
+    debian/tmp, but it's a faq. Added some explanation. By the way, since
+    there now exists a documented way to use dh_movefiles that does not
+    have problems with empty directories that get left behind and so on, I
+    think this Closes: #17111, #51985
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Oct 2000 23:07:42 -0700
+
 debhelper (2.1.16) unstable; urgency=low
 
   * dh_movefiles: fixed a regexp quoting problem with --sourcedir. 
