r380:    * dh_builddeb: added a --filename option to specify the output filename.      This is intended to be used when building .udebs for the debian      installer.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.1.18) unstable; urgency=low
+
+  * dh_builddeb: added a --filename option to specify the output filename.
+    This is intended to be used when building .udebs for the debian
+    installer.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Oct 2000 11:41:20 -0700
+
 debhelper (2.1.17) unstable; urgency=low
 
   * dh_movefiles.1: well I thought it was quite obvious why it always used
