r381:    * dh_builddeb: Ok, it is cosmetic, but it annoyed me.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.1.19) unstable; urgency=low
+
+  * dh_builddeb: Ok, it is cosmetic, but it annoyed me.
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  5 Nov 2000 16:20:46 -0800
+
 debhelper (2.1.18) unstable; urgency=low
 
   * dh_builddeb: added a --filename option to specify the output filename.
