r382:    * dh_suidregister: do not unregister on purge, since it will have already      been unregistered then, and a warning will result.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.1.20) unstable; urgency=low
+
+  * dh_suidregister: do not unregister on purge, since it will have already
+    been unregistered then, and a warning will result.
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  5 Nov 2000 17:02:50 -0800
+
 debhelper (2.1.19) unstable; urgency=low
 
   * dh_builddeb: Ok, it is cosmetic, but it annoyed me.
