--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.1.22) unstable; urgency=low
+
+  * Fixed dh_perl to work with perl 5.6, Closes: #76508
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  7 Nov 2000 15:56:54 -0800
+
 debhelper (2.1.21) unstable; urgency=low
 
   * dh_movefiles: no longer does the symlink ordering hack, as
