r387:    * I retract 2.1.23, the hack doesn't help make dpkg-shlibdeps work; db3      is broken upstream.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.1.24) unstable; urgency=low
+
+  * I retract 2.1.23, the hack doesn't help make dpkg-shlibdeps work; db3
+    is broken upstream.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 11 Nov 2000 17:35:34 -0800
+
 debhelper (2.1.23) unstable; urgency=low
 
   * dh_makeshlibs: Also scan files named "*.so*", not just "*.so.*",
