--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,15 @@
+debhelper (2.1.25) unstable; urgency=low
+
+  * Ok, I tihnk we have a db3 fix that will really work now.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 12 Nov 2000 13:29:59 -0800
+
 debhelper (2.1.24) unstable; urgency=low
 
   * I retract 2.1.23, the hack doesn't help make dpkg-shlibdeps work; db3
     is broken upstream.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 11 Nov 2000 17:35:34 -0800
+ -- Joey Hess <joeyh@debian.org>  Sun, 12 Nov 2000 13:29:57 -0800
 
 debhelper (2.1.23) unstable; urgency=low
 
