r389:    * Completed the fix from the last version.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.1.26) unstable; urgency=low
+
+  * Completed the fix from the last version.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 15 Nov 2000 20:39:25 -0800
+
 debhelper (2.1.25) unstable; urgency=low
 
   * Ok, I tihnk we have a db3 fix that will really work now.
