--- a/dh_link.1
+++ b/dh_link.1
@@ -19,7 +19,7 @@ can list pairs of files. If you use this file, you should put each pair
 of files on its own line, and separate the files within the pair with
 whitespace. Also, pairs of files can be specified as parameters - these
 pairs will only be created in the package build directory of the first
-ackage dh_link is told to act on. By default, this is the first binary
+package dh_link is told to act on. By default, this is the first binary
 package in debian/control, but if you use -p, -i, or -a flags, it will be
 the first package specified by those flags.
 .P
