--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.1.27) unstable; urgency=low
+
+  * Typo, Closes: #77441
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 19 Nov 2000 13:23:30 -0800
+
 debhelper (2.1.26) unstable; urgency=low
 
   * Completed the fix from the last version.
