--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.1.28) unstable; urgency=low
+
+  * Ok, fine, I'll make debhelper depend on lynx for the one or two
+    packages that have html changelogs. But you'll be sorry...
+    Closes: #77604
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 21 Nov 2000 15:13:39 -0800
+
 debhelper (2.1.27) unstable; urgency=low
 
   * Typo, Closes: #77441
